@@ -4,14 +4,19 @@ import com.watchapedia.watchpedia_user.model.dto.content.MovieDto;
 import com.watchapedia.watchpedia_user.model.dto.content.ajax.StarDto;
 import com.watchapedia.watchpedia_user.model.entity.content.ajax.Star;
 import com.watchapedia.watchpedia_user.model.network.request.ajax.StarRequest;
+import com.watchapedia.watchpedia_user.model.network.response.content.MovieResponse;
 import com.watchapedia.watchpedia_user.model.network.response.content.StarResponse;
 import com.watchapedia.watchpedia_user.model.repository.content.MovieRepository;
 import com.watchapedia.watchpedia_user.model.repository.content.ajax.StarRepository;
 import com.watchapedia.watchpedia_user.model.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Slice;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -21,8 +26,11 @@ public class StarService {
     final MovieRepository movieRepository;
     final StarRepository starRepository;
     @Transactional(readOnly = true) //데이터를 불러오기만 할 때(수정X)
-    public List<MovieDto> movieList(){
-        return movieRepository.findAll().stream().map(MovieDto::from).collect(Collectors.toList());
+    public List<MovieResponse> movieList(Long userIdx){
+        List<MovieResponse> movieList = new ArrayList<>(movieRepository.findAll().stream().map(MovieDto::from).map(MovieResponse::from).toList());
+//        평점을 남겼던 영화라면 인덱스 삭제
+        movieList.removeIf(mov-> starRepository.findByStarContentTypeAndStarContentIdxAndStarUserIdx("movie",mov.idx(),userIdx)!=null);
+        return movieList;
     }
 //    @Transactional(readOnly = true) //데이터를 불러오기만 할 때(수정X)
 //    public List<TVDto> tvList(){
